# Worker

./: .env.example  .gitignore  .gitmodules  MAINFEST.in  pyproject.toml
config/: supervisord.conf
examples/: mcp_http_client.py  mcp_http_server.py
examples/a2a/: __main__.py  agent.py  ftw_request_handler.py  test_client.py
examples/huggingface/: instance.py  requirements.txt
examples/mcp/authentication/: main.py  pyproject.toml
examples/mcp/mcp-server-demo/: pyproject.toml
examples/mcp/weather/: pyproject.toml  weather.py
examples/mcp/worker-integration/: client_comparison.py  client_example.py  main.py  pyproject.toml  resources.py  tools.py  weather.py
src/: manage.py
src/finetune/: __init__.py  conf.py  config.py  exceptions.py
src/finetune/api/: utils.py  worker.py
src/finetune/celery/: app.py  tasks.py
src/finetune/cli/: __init__.py  __main__.py  health.py  initialize.py  kill.py  logs.py  restart.py  start.py  status.py  stop.py  version.py
src/finetune/event_listener/: __init__.py  __main__.py  events.py  lifespan.py
src/finetune/events/: __init__.py  __main__.py  event.py
src/finetune/mcp/: __init__.py  client.py  client_old.py  http_client.py  stdio_server.py
src/finetune/processes/: base.py  client.py  event_listener.py  events.py  mcp_client.py  mcp_http_client.py  mcp_http_server.py  mcp_server.py  mcp_stdio_client.py  mcp_stdio_server.py  server.py
src/finetune/sse/: event_listener.py  events.py  lifespan.py  run.py  tasks.py
src/finetune/supervisor/: __init__.py  config.py  manager.py
src/finetune/utils/: __init__.py  logging.py  redis_client.py  redis_health.py  signals.py
src/finetune/ws/: conversation.py  worker.py
src/finetune_sdk/: conf.py  settings.py
src/finetune_sdk/cli/: __init__.py  cli.py
src/finetune_sdk/mcp/: client.py
src/finetune_worker/: __init__.py
src/finetune_worker/sse/: events.py  run.py
src/finetune_worker/ws/: messages.py
src/ftw/: __init__.py  conf.py  settings.py
src/ftw/api/: utils.py  worker.py
src/ftw/celery/: app.py  tasks.py
src/ftw/mcp/: client.py  client_old.py
src/ftw/sse/: event_listener.py  events.py  lifespan.py  run.py  tasks.py
src/ftw/ws/: conversation.py  worker.py
