[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "finetune-sdk"
dynamic = ["version"]
authors = [
  { name = "Peter Pak", email = "ppak10@gmail.com" },
]
description = "Python worker client for communicating with finetune.build's API"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]

dependencies = [
    "aiohttp",
    "mcp[cli]>=1.10.0",
    "pydantic>=2.11.7",
    "watchdog",
    "websockets",
]

[project.urls]
Homepage = "https://github.com/finetune-build/python-sdk"
Issues = "https://github.com/finetune-build/python-sdk/issues"

[project.optional-dependencies]
cli = [
    "python-dotenv>=1.1.1",
    "rich>=14.0.0",
    "typer>=0.16.0",
    "typing-extensions>=4.14.0",
]
supervisor = [
    "jinja2>=3.1.6",
    "setuptools<81",
    "supervisor>=4.2.5",
]

[project.scripts]
finetune = "finetune.cli:app [cli]"

[tool.hatch.build]
sources = ["src"]

[tool.hatch.build.targets.wheel]
include = [
  "src/**/*",
  "README.md",
]

[tool.hatch.build.targets.sdist]
include = [
  "src/**/*",
  "README.md",
]

[tool.hatch.version]
path = "src/finetune/__init__.py"  # or another version file

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.uv.workspace]
members = [
    "examples/weather",
    "examples/mcp/mcp-server-demo",
    "examples/mcp/worker-integration",
    "examples/mcp/authentication",
]
