[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "finetune-sdk"
dynamic = ["version"]
authors = [
  { name = "Peter Pak", email = "ppak10@gmail.com" },
]
description = "Python Software Development Kit for finetune.build"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]

dependencies = [
    "fastapi>=0.115.14",
    "watchdog",
    "websockets",
]

[project.urls]
Homepage = "https://github.com/finetune-build/python-sdk"
Issues = "https://github.com/finetune-build/python-sdk/issues"

[project.optional-dependencies]
cli = [
    "python-dotenv>=1.1.1",
    "rich>=14.0.0",
    "typer>=0.16.0",
    "typing-extensions>=4.14.0",
]
supervisor = [
    "jinja2>=3.1.6",
    "pydantic>=2.11.7",
    "redis>=6.2.0",
    "setuptools<81",
    "supervisor>=4.2.5",
]
mcp = [
    "mcp[cli]>=1.10.0",
]
events = [
    "aiohttp>=3.12.13",
]

[project.scripts]
finetune = "finetune.cli:app [cli]"

[tool.hatch.build]
sources = ["src"]

[tool.hatch.build.targets.wheel]
include = [
  "src/**/*",
  "README.md",
]

[tool.hatch.build.targets.sdist]
include = [
  "src/**/*",
  "README.md",
]

[tool.hatch.version]
path = "src/finetune/__init__.py"  # or another version file

[tool.black]
line-length = 88
target-version = ["py39"]
